<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragments.ProfileFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:id="@+id/userInformationLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/realNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/firstname_lastname"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="35dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/username_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/username"
            android:textAlignment="center" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:id="@+id/profileStatisticsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_border"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/programLinearLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/programNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_programs_created"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_programs"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/followerLinearLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followerNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_followers"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/followingLinearLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followingNumbertextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_following"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_following"
                android:textAlignment="center"
                android:textColor="@color/white"

                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:id="@+id/contactMeLinearLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="98dp"-->
    <!--android:layout_margin="@dimen/discover_layout_margin"-->
    <!--android:orientation="vertical">-->

    <!--<Button-->
    <!--android:id="@+id/followButton"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="?android:attr/selectableItemBackground"-->
    <!--android:text="@string/text_follow"-->
    <!--android:textColor="#03ae7d"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="bold"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent" />-->

    <!--<Button-->
    <!--android:id="@+id/messageButton"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="?android:attr/selectableItemBackground"-->
    <!--android:text="@string/text_message"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="bold"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/followButton"-->
    <!--app:layout_constraintVertical_bias="0.0" />-->
    <!--</LinearLayout>-->

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <FrameLayout
        android:id="@+id/profileContainer_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="16dp">

    </FrameLayout>

    <!--TODO: lorsque la page de programmes sera faite, il faudra l'implémenter dans le profil-->

</LinearLayout>

